# atestat

./: .gitignore  CMakeLists.txt  README.md  test.cc
include/: cmd.hpp  color.hpp  key.hpp  model.hpp  msg.hpp  program.hpp  rune.hpp  terminal.hpp  text.hpp  ticker.hpp  tuipp.hpp  tuipp_base.hpp
tui++/: base.cc  color.cc  key.cc  program.cc  rune.cc  terminal.cc  text.cc
